--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                             <label for="confirm_password">CONFIRM PASSWORD</label><br>
                             <input type="password" id="confirm_password" pattern="(?=.*\d)(?=.*[a-z])(?=.*[A-Z]).{8,}"
                                 title="Must contain at least one number and one uppercase and lowercase letter, and at least 8 or more characters"
-                                placeholder="Enter Your Confirm Password" required>
+                                placeholder="Enter Confirm Password" required>
                         </div>
                     </div>
                 </div>
