--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
         <div class="form_container">
             <div class="para">
-                <p style="font-weight: bolder; color: hsl(0, 0%, 20%);">This is not a real
+                <p style="font-weight: bolder; color: hsl(170.38deg 10.97% 53.33%);">This is not a real
                     online service! You know you need
                     something like this in your life to help you realize your
                     deepest dreams. <br>Sign up <em>now</em> to get started.</br></p>
